--- a/docs/pages/components/action-banner.mdx
+++ b/docs/pages/components/action-banner.mdx
@@ -165,7 +165,7 @@ Use the subtle variant when you need a call to action with context, but don't wa
 </CH.Code>
 </Example>
 
-The full-bleed action banner spans the full width of the browser window and adds an image to the side of the content.  
+The full-width action banner spans the full width of the browser window and adds an image to the side of the content.  
 
 It can be used to break up a page layout - breaking out of the standard page container or to complement other full-width elements such as the full-bleed panels that are used on the homepage.  
 
@@ -176,7 +176,14 @@ The full width banner contains:
 - an image  
 - a button
 
+## Images
+Images should follow the brand guidelines for photography and illustration.  
 
+Use appropriate alt text to describe the image. 
+
+## Mobile 
+
+Images will stack above the content in the banner on mobile devices. 
 
 
 <Example fullWidth>
@@ -223,18 +230,8 @@ The full width banner contains:
 </CH.Code>
 </Example>
 
-## Images
-Images should follow the brand guidelines for photography and illustration.  
-
-Use appropriate alt text to describe the image. 
-
-## Mobile 
-
-Images will stack above the content in the banner on mobile devices. 
-
-
 <Example fullWidth>
-<h4>Example: full width action banner</h4>
+<h4>Example: full width subtle action banner</h4>
 <ActionBanner
 	variant="fullWidthSubtle"
 	title="Full width subtle action banner"
