--- a/docs/pages/components/action-banner.mdx
+++ b/docs/pages/components/action-banner.mdx
@@ -124,7 +124,7 @@ The default variant is strong and grabs users' attention. Use sparingly for impo
 Use the subtle variant when you need a call to action with context, but don't want to distract users. For example giving feedback on a page. Use with a primary .btn.btn--primaryor secondary - .btn.btn--secondary button.
 
 ### Full width action banner
-<Example fullWidth>
+<Example>
 <h4>Example: full width action banner</h4>
 <ActionBanner
 	variant="fullWidth"
@@ -165,7 +165,7 @@ Use the subtle variant when you need a call to action with context, but don't wa
 </CH.Code>
 </Example>
 
-The full-bleed action banner spans the full width of the browser window and adds an image to the side of the content.  
+The full width action banner spans the full width of the browser window and adds an image to the side of the content.  
 
 It can be used to break up a page layout - breaking out of the standard page container or to complement other full-width elements such as the full-bleed panels that are used on the homepage.  
 
@@ -179,7 +179,7 @@ The full width banner contains:
 
 
 
-<Example fullWidth>
+<Example>
 <h4>Example: full width action banner (with image)</h4>
 <ActionBanner
 	variant="fullWidth"
@@ -233,7 +233,7 @@ Use appropriate alt text to describe the image.
 Images will stack above the content in the banner on mobile devices. 
 
 
-<Example fullWidth>
+<Example>
 <h4>Example: full width action banner</h4>
 <ActionBanner
 	variant="fullWidthSubtle"
