NDS-412 Add screenshots for action-banner fullWidth variants

--- a/docs/pages/components/action-banner.mdx
+++ b/docs/pages/components/action-banner.mdx
@@ -126,13 +126,8 @@ Use the subtle variant when you need a call to action with context, but don't wa
 ### Full width action banner
 <Example>
 <h4>Example: full width action banner</h4>
-<ActionBanner
-	variant="fullWidth"
-	title="Full width action banner"
-	cta={<Button>A button</Button>}
->
-	This is <a href="#">some content with a link</a>
-</ActionBanner>
+<Screenshot image="action-banner-1.jpg" alt="Screenshot of the action-banner component full width variant" />
+
 
 <CH.Code>
 ```js React
@@ -176,19 +171,10 @@ The full width banner contains:
 - an image  
 - a button
 
-
-
-
 <Example>
 <h4>Example: full width action banner (with image)</h4>
-<ActionBanner
-	variant="fullWidth"
-	title="Full width action banner with image"
-	cta={<Button>A button</Button>}
-	image="http://placekitten.com/g/800/1200"
->
-	This is <a href="#">some content with a link</a>
-</ActionBanner>
+<Screenshot image="action-banner-2.jpg" alt="Screenshot of the action-banner component with image" />
+
 
 <CH.Code>
 ```js React
@@ -232,16 +218,10 @@ Use appropriate alt text to describe the image.
 
 Images will stack above the content in the banner on mobile devices. 
 
-
 <Example>
 <h4>Example: full width action banner</h4>
-<ActionBanner
-	variant="fullWidthSubtle"
-	title="Full width subtle action banner"
-	cta={<Button>A button</Button>}
->
-	This is <a href="#">some content with a link</a>
-</ActionBanner>
+<Screenshot image="action-banner-3.jpg" alt="Screenshot of the action-banner component with subtle background colour" />
+
 
 <CH.Code>
 ```js React
