add optional index prop to identify fullWidth component position in example block

--- a/docs/pages/components/page-header.mdx
+++ b/docs/pages/components/page-header.mdx
@@ -183,7 +183,7 @@ Use underneath the breadcrumb inside a container and above the main content. Use
 ### Full width light variant
 
 
-<Example>
+<Example fullWidth fullWidthChildIndex={0}>
 <FullWidthLightHeader />
 <CH.Code>
 ```js React
@@ -207,7 +207,7 @@ Use underneath the breadcrumb inside a container and above the main content. Use
 
 ### Full width dark variant
 
-<Example>
+<Example fullWidth fullWidthChildIndex={0}>
 <FullWidthDarkHeader />
 <CH.Code>
 ```js React
@@ -231,7 +231,7 @@ Use underneath the breadcrumb inside a container and above the main content. Use
 
 ### Header with second section
 
-<Example>
+<Example fullWidth fullWidthChildIndex={0}>
 <HeaderWithSecondSection />
 <CH.Code>
 ```js React
