NDS-426 WIP changed caution to use variant syntax instead of boolean flag

--- a/docs/pages/components/accordion.mdx
+++ b/docs/pages/components/accordion.mdx
@@ -102,7 +102,7 @@ You can choose from the default single accordion, a caution accordion or grouped
 
 <CH.Code>
 ```js React
-<Accordion title="Caution accordion title" isCaution={true}>
+<Accordion title="Caution accordion title" variant="caution">
 	Our monthly newsletter, keeping you up to date with{" "}
 	<a href="#">important developments at NICE</a>
 </Accordion>
