--- a/docs/pages/components/action-banner.mdx
+++ b/docs/pages/components/action-banner.mdx
@@ -124,10 +124,15 @@ The default variant is strong and grabs users' attention. Use sparingly for impo
 Use the subtle variant when you need a call to action with context, but don't want to distract users. For example giving feedback on a page. Use with a primary .btn.btn--primaryor secondary - .btn.btn--secondary button.
 
 ### Full width action banner
-<Example>
+<Example fullWidth>
 <h4>Example: full width action banner</h4>
-<Screenshot image="action-banner-1.jpg" alt="Screenshot of the action-banner component full width variant" />
-
+<ActionBanner
+	variant="fullWidth"
+	title="Full width action banner"
+	cta={<Button>A button</Button>}
+>
+	This is <a href="#">some content with a link</a>
+</ActionBanner>
 
 <CH.Code>
 ```js React
@@ -160,56 +165,37 @@ Use the subtle variant when you need a call to action with context, but don't wa
 </CH.Code>
 </Example>
 
-The full width action banner spans the full width of the browser window and adds an image to the side of the content.  
+The full-width action banner spans the full width of the browser window and adds an image to the side of the content.
 
-It can be used to break up a page layout - breaking out of the standard page container or to complement other full-width elements such as the full-bleed panels that are used on the homepage.  
+It can be used to break up a page layout - breaking out of the standard page container or to complement other full-width elements such as the full-bleed panels that are used on the homepage.
 
 The full width banner contains:
 
-- a short heading (H2) 
-- descriptive text for extra context (lead text) 
-- an image  
+- a short heading (H2)
+- descriptive text for extra context (lead text)
+- an image
 - a button
 
-<Example>
-<h4>Example: full width action banner subtle variant</h4>
-<Screenshot image="action-banner-2.jpg" alt="Screenshot of the action-banner component with subtle background colour" />
+## Images
+Images should follow the brand guidelines for photography and illustration.
+
+Use appropriate alt text to describe the image.
+
+## Mobile
+
+Images will stack above the content in the banner on mobile devices.
 
 
-<CH.Code>
-```js React
+<Example fullWidth>
+<h4>Example: full width action banner (with image)</h4>
 <ActionBanner
-	variant="fullWidthSubtle"
-	title="Full width subtle action banner"
+	variant="fullWidth"
+	title="Full width action banner with image"
 	cta={<Button>A button</Button>}
+	image="http://placekitten.com/g/800/1200"
 >
 	This is <a href="#">some content with a link</a>
 </ActionBanner>
-```
-```html HTML
-<section class="action-banner action-banner--full-width-subtle" data-component="action-banner--fullWidthSubtle">
-  <div class="action-banner__container">
-    <div class="action-banner__inner">
-      <div class="action-banner__text">
-        <h2 class="action-banner__title">Full width subtle action banner</h2>
-        <div class="action-banner__intro">
-          <p>This is <a href="#">some content with a link</a></p>
-        </div>
-      </div>
-      <div class="action-banner__actions">
-        <button type="button" class="btn" data-component="button--primary">A button</button>
-      </div>
-    </div>
-  </div>
-</section>
-```
-</CH.Code>
-</Example>
-
-<Example>
-<h4>Example: full width action banner (with image)</h4>
-<Screenshot image="action-banner-3.jpg" alt="Screenshot of the action-banner component with image" />
-
 
 <CH.Code>
 ```js React
@@ -244,14 +230,45 @@ The full width banner contains:
 </CH.Code>
 </Example>
 
-## Images
-Images should follow the brand guidelines for photography and illustration.  
+<Example fullWidth>
+<h4>Example: full width subtle action banner</h4>
+<ActionBanner
+	variant="fullWidthSubtle"
+	title="Full width subtle action banner"
+	cta={<Button>A button</Button>}
+>
+	This is <a href="#">some content with a link</a>
+</ActionBanner>
 
-Use appropriate alt text to describe the image. 
-
-## Mobile 
-
-Images will stack above the content in the banner on mobile devices. 
+<CH.Code>
+```js React
+<ActionBanner
+	variant="fullWidthSubtle"
+	title="Full width subtle action banner"
+	cta={<Button>A button</Button>}
+>
+	This is <a href="#">some content with a link</a>
+</ActionBanner>
+```
+```html HTML
+<section class="action-banner action-banner--full-width-subtle" data-component="action-banner--fullWidthSubtle">
+  <div class="action-banner__container">
+    <div class="action-banner__inner">
+      <div class="action-banner__text">
+        <h2 class="action-banner__title">Full width subtle action banner</h2>
+        <div class="action-banner__intro">
+          <p>This is <a href="#">some content with a link</a></p>
+        </div>
+      </div>
+      <div class="action-banner__actions">
+        <button type="button" class="btn" data-component="button--primary">A button</button>
+      </div>
+    </div>
+  </div>
+</section>
+```
+</CH.Code>
+</Example>
 
 ## Accessibility
 
