--- a/docs/pages/components/page-header.mdx
+++ b/docs/pages/components/page-header.mdx
@@ -1,6 +1,6 @@
 import { ComponentLayout } from "components/layouts/ComponentLayout";
 import { Example } from "components/examples/Example";
-import { DefaultHeader, PreHeader, LeadHeader, MetadataHeader, CTAHeader, FullWidthLightHeader, FullWidthDarkHeader, HeaderWithBreadcrumbs, HeaderWithDescription, HeaderWithSecondSection } from "components/examples/PageHeader";
+import { DefaultHeader, PreHeader, LeadHeader, MetadataHeader, CTAHeader, FullWidthLightHeader, FullWidthDarkHeader, HeaderWithBreadcrumbs, HeaderWithDescription, HeaderWithSecondSection, WithVerticalPadding } from "components/examples/PageHeader";
 
 export const meta = {
 	title: "Page Header",
@@ -180,21 +180,46 @@ Use underneath the breadcrumb inside a container and above the main content. Use
 </CH.Code>
 </Example>
 
+### verticalPadding
+
+<Example>
+<WithVerticalPadding />
+<CH.Code>
+```js React
+<PageHeader
+	heading="I have vertical padding!"
+	verticalPadding="loose"
+/>
+```
+```html HTML
+<div
+  class="page-header page-header--vertical-padding-loose"
+  data-component="page-header"
+>
+  <div class="container">
+    <h1 class="page-header__heading">I have vertical padding!</h1>
+  </div>
+</div>
+```
+</CH.Code>
+</Example>
+
 ### Full width light variant
 
 
-<Example>
+<Example fullWidth fullWidthChildIndex={0}>
 <FullWidthLightHeader />
 <CH.Code>
 ```js React
 <PageHeader
 	heading="I am a full width light header!"
 	variant="fullWidthLight"
+	verticalPadding="loose"
 />
 ```
 ```html HTML
 <div
-  class="page-header page-header--full-width-light"
+  class="page-header page-header--full-width-light page-header--vertical-padding-loose"
   data-component="page-header"
 >
   <div class="container">
@@ -207,18 +232,19 @@ Use underneath the breadcrumb inside a container and above the main content. Use
 
 ### Full width dark variant
 
-<Example>
+<Example fullWidth fullWidthChildIndex={0}>
 <FullWidthDarkHeader />
 <CH.Code>
 ```js React
 <PageHeader
 	heading="I am a full width dark header!"
 	variant="fullWidthDark"
+	verticalPadding="loose"
 />
 ```
 ```html HTML
 <div
-  class="page-header page-header--full-width-dark"
+  class="page-header page-header--full-width-dark page-header--vertical-padding-loose"
   data-component="page-header"
 >
   <div class="container">
@@ -229,21 +255,23 @@ Use underneath the breadcrumb inside a container and above the main content. Use
 </CH.Code>
 </Example>
 
+
 ### Header with second section
 
-<Example>
+<Example fullWidth fullWidthChildIndex={0}>
 <HeaderWithSecondSection />
 <CH.Code>
 ```js React
 <PageHeader
 	heading="There's a second section here!"
 	variant="fullWidthLight"
+	verticalPadding="loose"
 	secondSection={secondSectionComponent}
 />
 ```
 ```html HTML
 <div
-  class="page-header page-header--full-width-light"
+  class="page-header page-header--full-width-light page-header--vertical-padding-loose"
   data-component="page-header"
 >
   <div class="container">
